src/main/jkube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ultradragon-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /ultradragon
spec:
  rules:
    - http:
        paths:
          - path: /ultradragon
            pathType: Prefix
            backend:
              service:
                name: ultradragon
                port:
                  number: 8080
